fix mobile banner overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2017,8 +2017,8 @@ small,
 @media (max-width: 625px) {
   .profile-banner {
     min-height: 200px;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
